Mall test extensions Code corrections